Fix spacing in footer styles and ensure consistent image borders in medium.css

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -15,6 +15,10 @@
         "photo learn";
     }
 
+    #allplaces div img{
+      border-right: solid 1px #bbb;
+    }
+
     #allplaces div address {
         margin-bottom: 0;
     }
